@@ -1,3 +1,11 @@
+2004-09-03  Johan Dahlin  <johan@gnome.org>
+
+	* jhbuild/modtypes/svnmodule.py (parse_svnmodule): assert if we
+	don't have an svnroot
+
+	* jhbuild/utils/svn.py (SVNRoot.checkout): Don't append checkout
+	dir twice.
+
 2004-09-02  James Henstridge  <james@jamesh.id.au>
 
 	* jhbuild/commands/sanitycheck.py (do_sanitycheck): don't check
